# wavylon

./: ARCHITECTURE  AUTHORS  ChangeLog  Makefile  NEWS  NEWS-RU  README  README.md  TODO  db.h  document.cpp  document.h  floatbuffer.cpp  fx-filter.cpp  fx-filter.h  fx.cpp  fx.h  fxlist.cpp  fxlist.h  fxrack.cpp  fxrack.h  fxset.cpp  fxset.h  levelmeter.cpp  levelmeter.h  main.cpp  meson.build  project.cpp  project.h  tinyplayer.cpp  tinyplayer.h  tio.cpp  tio.h  utils.cpp  utils.h  wavylon.cpp  wavylon.h  wavylon.pro  wavylon.qrc
desktop/: wavylon.desktop
manuals/: en.html  ru.html
palettes/: EKO
translations/: wavylon_ru.qm  wavylon_ru.ts
